# sha1_gpu_nearcollisionattacks

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  fs76_gen_basesol.sh  run_freestart76.sh
contrib/: rng.cpp  rng.hpp  sha1detail.cpp  sha1detail.hpp  timer.hpp  types.hpp
freestart76/: cpu_step18-56.cpp  cuda_dummy.cpp  cuda_step18-56.cu  cyclicbuffer.hpp  find_basesols.cpp  find_basesolution_mbo1.cpp  main.cpp  main.hpp  sha1benchmark.cu  tables.hpp
freestart80/: cpu_step18-60.cpp  cuda_step18-60.cu  cyclicbuffer.hpp  find_basesols.cpp  find_basesolution_mbo1.cpp  main.cpp  main.hpp  neutral_bits_packing.hpp  sha1benchmark.cu  tables.hpp
lib/: base64.hpp  cpuperformance.hpp  cuda_cyclicbuffer.hpp  cuda_dummy.cpp  rng.cpp  rng.hpp  sha1benchmark.cu  sha1detail.cpp  sha1detail.hpp  timer.cpp  timer.hpp  types.hpp
shattered_nc2/: cuda_step14-60.cu  find_basesols.cpp  main.cpp  main.hpp  neutral_bits_packing.hpp  tables_org.hpp  tables_wQ14nb.hpp  tables_wQ17nb.hpp  tables_wboom.hpp
